--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@
 # Web related
 lib/generated_plugin_registrant.dart
 
+#Metamask, Infura and Contracts
+*.env
+
 # Symbolication related
 app.*.symbols
 
