--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   
-  web3dart: ^2.4.0
+  web3dart: ^2.4.1
   http: ^0.13.4
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
+  walletconnect_dart: ^0.0.11
 
   cupertino_icons: ^1.0.2
 
