--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   walletconnect_dart: ^0.0.11
+  wallet_connect: ^1.0.2
+  url_launcher: ^6.1.4
 
   cupertino_icons: ^1.0.2
 
