--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   walletconnect_dart: ^0.0.11
   wallet_connect: ^1.0.2
   url_launcher: ^6.1.4
+  walletconnect_secure_storage: ^1.0.0
 
   cupertino_icons: ^1.0.2
 
