--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   wallet_connect: ^1.0.2
   url_launcher: ^6.1.4
   walletconnect_secure_storage: ^1.0.0
+  walletconnect_qrcode_modal_dart: ^0.0.5
 
   cupertino_icons: ^1.0.2
 
